<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">悦途</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password_repeat">重复密码</string>
    <string name="title_bar_home">旅途记忆</string>
    <string name="title_bar_add">发布游记</string>
    <string name="title_bar_person">个人信息</string>
    <string name="home">首页</string>
    <string name="add">添加</string>
    <string name="person">个人</string>
    <string name="release">发布</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="userName">喵喵喵，咪咪咪</string>
    <string name="editBtn">编辑资料</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="sign">个性签名</string>
    <string name="exit">退出当前帐号</string>
    <string name="age_content">18</string>
    <string name="sex_content">女</string>
    <string name="sign_content">暂无</string>
    <string name="sendBtn">发送</string>
    <string name="title_bar_person_edit">编辑资料</string>
    <string name="saveBtn">保存</string>
    <string name="addTitle_hint">在此输入标题</string>
    <string name="addtext_hint">在此输入一些内容文字...</string>
    <string name="item_title">挪威自然风光</string>
    <string name="page_number">0/0</string>
    <string name="writerName">宫水三叶</string>
    <string name="followBtn">+ 关注</string>
    <string name="title">英国之行</string>
    <string name="content">翘首以盼的英伦之行转眼已经结束，回味这八天的行程，总感到没有过瘾，还有很多值得回味和深思。 
英国给世人的第一印象往往是伦敦的雾气和大本钟的钟声；迄今为止欧州最古老的王室（白金汉宫）；在过去的千余年中，在国土上建起大量的城堡庄园（温莎城堡、邱吉尔庄园等）；珍藏收集来自世界各国的几百万件展品（大英博物馆、阿什莫林博物馆等）；英国现存的中世纪教堂（威斯敏斯特教堂、约克大教堂、塞比尔教堂等）；牛津、剑桥这两地世界著名的高等学府；苏格兰的精神象征-爱丁堡城堡和苏格兰的风笛和裙子；英格兰最大的湖泊度假圣地-温德米尔湖、最美乡村-拜伯里阿灵顿排屋：产业革命时代的开路先锋被誉为世界工厂的曼彻斯特；曾经是航海枢纽的利物浦艾伯特码头如今面貌一新；“足球无关生死，足球高于生死” 的英式足球文化；当然还有伦敦的邦德街牛津街、爱丁堡的皇家一英里大道购物游览……

00
第一天(11月13日)从上海飞北京，乘海南航空，（11：55起飞， 14:15抵达），因换机超过四小时，安排住宿。 
第二天(11月14日) 临晨01:45继续乘海南航空前往曼彻斯特，抵达英国时间05:45（时差八小时），飞行8100公里，飞行11小时。然后安排前往曼彻斯特市政厅、老特拉福德球场游览。 
第三天(11月15日) 我们离开伯明翰前往科伦河山谷寻找“英国最美丽的村镇”-拜伯丽镇上的阿灵顿排屋，中午抵达牛津大学Oxford这拥有近900年历史的一座古色古香的大学城，漫步在古老的建筑之中，仿佛穿越了英国历史。 
第四天(11月16日) 早餐后，前往女王伊丽莎白二世的国事活动场所白金汉宫；英国政治的心脏地带白厅街、唐宁街；泰晤士河边的国会大厦、大本钟、威斯敏斯特教堂等伦敦著名景点；并乘船游览泰晤士河，观赏伦敦塔、伦敦塔桥、伦敦眼。坐泰晤士河游船之后，在伦敦塔附近就中午餐，接着造访汇集世界文明遗迹的殿堂大英博物馆参观。怀着对未知事物的求知欲，在这家全球最知名的博物馆，领略浩如烟海、贯通古今东西的世界人文和自然珍藏，感受世界的博大、多元与精妙。晚住伦敦希尔顿酒店（Doubletree By Hilton），住宿条件是这次旅程最好的。

00
第五天(11月17日) 早餐之后，我们将离开英国的首都北上，途经温莎（Windsor距离伦敦约32公里），要参观建于11世纪末的温莎古堡，历史上共有39位英国国王居住于此。温莎古堡是目前英国王室温莎王朝的家族城堡，也是现今世界上有人居住的城堡中最大的一个。然后还要去剑桥大学，对剑桥深度畅游，感受徐志摩笔下的彩虹式康桥，体验荡舟于康河的浪漫之旅。当晚住罗兹小镇（leeds），住宿条件不错。 
第六天(11月18日) 今天要赶往英格兰东北部著名景点，富有情调的中世纪老城约克（York），城内至今保留着古老的城墙、教堂和街道。我们路上先去塞尔比教堂，据说这里是周杰伦和昆凌2015年春举行基督教结婚仪式的地方，之后他俩携同亲友前往霍德华城堡举行婚礼派对。</string>
</resources>
