<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:background="@color/bar_background">
	
	    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:text="@string/title_bar_home"
	    android:textSize="20sp" 
	    android:textColor="@color/text_font_white"/>
 
	</RelativeLayout>

	<ListView
	    android:id="@+id/content"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@color/transparent"
	    android:scrollbars="none"
	    android:divider="@color/transparent"  
        android:listSelector="@color/transparent" >
	    
	</ListView>
	
	<LinearLayout  
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:background="@color/bar_background"
	    android:gravity="bottom"
	    android:paddingTop="6dp"
	    android:paddingBottom="6dp" >
	    
	    <LinearLayout
            android:id="@+id/bar_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >
 
	        <ImageView
	            android:id="@+id/iv_home"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="15"
	            android:src="@drawable/home" />
	
	        <TextView
	            android:id="@+id/tv_home"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:layout_marginTop="3dp"
	            android:text="@string/home"
	            android:textColor="@color/text_font_white"
	            android:textSize="10sp"
	            android:textStyle="bold" />
	    </LinearLayout>
 
	    <LinearLayout
	        android:id="@+id/bar_add"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/iv_add"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="15"
	            android:src="@drawable/add" />
	
	        <TextView
	            android:id="@+id/tv_add"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:layout_marginTop="3dp"
	            android:text="@string/add"
	            android:textColor="@color/text_font_white"
	            android:textSize="10sp"
	            android:textStyle="bold" />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/bar_person"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:orientation="vertical" >
	
	        <ImageView
	            android:id="@+id/iv_person"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="15"
	            android:src="@drawable/person" />
	
	        <TextView
	            android:id="@+id/tv_person"
	            android:layout_width="wrap_content"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:layout_marginTop="3dp"
	            android:text="@string/person"
	            android:textColor="@color/text_font_white"
	            android:textSize="10sp"
	            android:textStyle="bold" />
	    </LinearLayout>

	</LinearLayout>
	
</LinearLayout>